--- a/templates/intro.html
+++ b/templates/intro.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container center">
         <h1>SQL 문제풀이 학습 플랫폼</h1>
         <div class="card center-card">
             <p>SQL 문제풀이 학습 플랫폼입니다.<br>실제 기업 실무 데이터를 기반으로 문제를 출제하였습니다.<br>"SQL 퀴즈 시작하기" 버튼을 눌러 문제를 풀어보세요.</p>
