--- a/templates/intro.html
+++ b/templates/intro.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container center">
         <h1>SQL 문제풀이 학습 플랫폼</h1>
-        <div class="card center-card">
+        <div class="card">
             <p>SQL 문제풀이 학습 플랫폼입니다.<br>실제 기업 실무 데이터를 기반으로 문제를 출제하였습니다.<br>"SQL 퀴즈 시작하기" 버튼을 눌러 문제를 풀어보세요.</p>
             <a href="/quiz/1" class="btn-start">SQL 퀴즈 시작하기 🚀</a>
         </div>
