--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -53,7 +53,7 @@
         </div>
 
         {% if result %}
-        <div class="card overflow-card">
+        <div class="card table-card">
             <h2>결과</h2>
             <div class="table-wrapper">
                 <table>
