--- a/templates/intro.html
+++ b/templates/intro.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>SQL 퀴즈 시작하기</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
 </head>
-<body>
-    <div class="container center">
-        <h1>SQL 문제풀이 학습 플랫폼</h1>
-        <div class="card">
-            <p>SQL 문제풀이 학습 플랫폼입니다.<br>실제 기업 실무 데이터를 기반으로 문제를 출제하였습니다.<br>"SQL 퀴즈 시작하기" 버튼을 눌러 문제를 풀어보세요.</p>
-            <a href="/quiz/1" class="btn-start">SQL 퀴즈 시작하기 🚀</a>
+<body class="bg-dark text-light">
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <div class="card bg-secondary mb-4">
+                    <div class="card-body text-center">
+                        <h1 class="card-title">SQL 문제풀이 학습 플랫폼</h1>
+                        <p class="card-text">기업 실무 데이터를 기반으로 한 SQL 퀴즈입니다.<br>아래 버튼을 눌러 시작하세요.</p>
+                        <a href="/quiz/1" class="btn btn-primary mt-3">SQL 퀴즈 시작하기 🚀</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
