--- a/templates/intro.html
+++ b/templates/intro.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1>SQL 문제풀이 학습 플랫폼</h1>
         <div class="card">
-            <p>기업 실무 데이터를 기반으로 한 SQL 퀴즈입니다.<br>시작 버튼을 눌러 도전해보세요.</p>
+            <p>기업 실무 데이터를 기반으로 한 SQL 퀴즈입니다.<br>아래 버튼을 눌러 시작하세요!</p>
             <a href="/quiz/1" class="btn-start">SQL 퀴즈 시작하기 🚀</a>
         </div>
     </div>
